Fix dark mode button colors

--- a/frontend/node_configuration/react_components/css/PowerButton.css
+++ b/frontend/node_configuration/react_components/css/PowerButton.css
@@ -22,10 +22,6 @@
     border-radius: 0.5rem !important;
 }
 
-body.dark .menu-button {
-    border: 1px solid #dee2e617 !important;
-}
-
 .power-button {
     background-image: radial-gradient(circle, #ffc107 5%, white 55%);
     background-size: 500% 500%;
@@ -39,18 +35,6 @@ body.dark .menu-button {
     color: #000;
 }
 
-body.dark .bi-lightbulb, body.dark  .bi-exclamation-lg {
-    color: #fff;
-}
-
-body.dark .power-button {
-    background-image: radial-gradient(circle, #ffc107 5%, transparent 55%);
-    /*     border: 2px solid #2B2E2F !important; */
-
-    /* Add border for visibility when not filled in (device turned off) */
-    border: 1px solid #dee2e617 !important;
-}
-
 .toggle-on {
     animation-name: fade-on;
     animation-duration: 1.2s;
@@ -62,4 +46,25 @@ body.dark .power-button {
     animation-name: fade-off;
     animation-duration: 1.2s;
     animation-timing-function: ease-in-out;
+}
+
+/* Dark mode button colors */
+@media (prefers-color-scheme: dark) {
+    :root {
+        .menu-button {
+            border: 1px solid #dee2e617 !important;
+        }
+
+        .power-button {
+            background-image: radial-gradient(circle, #ffc107 5%, transparent 55%);
+            /*     border: 2px solid #2B2E2F !important; */
+
+            /* Add border for visibility when not filled in (device turned off) */
+            border: 1px solid #dee2e617 !important;
+        }
+
+        .bi-lightbulb, .bi-exclamation-lg {
+            color: #fff;
+        }
+    }
 }
